# sdl-playground

./: README.md
moose/: CMakeLists.txt  README.txt
moose/include/: log.h  tiny_xpm.h
moose/src/: teststreaming.c  tiny_xpm.c
simpleffplayer/: .gitignore  Makefile  README.md  compile_gcc_mac.sh  simpleffplayer.c
